deployment/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    app: flaskpoker
  name: flaskpoker
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: flaskpoker
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: flaskpoker
    spec:
      containers:
      - image: ghcr.io/blackthornyugen/flaskpoker:main
        imagePullPolicy: Always
        name: flaskpoker
      imagePullSecrets:
      - name: ghrcred
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
