deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flaskpoker
  name: flaskpoker
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: flaskpoker
  type: ClusterIP
