deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: flaskpoker
spec:
  ingressClassName: nginx
  rules:
  - host: poker.arrakis.jskw.dev
    http:
      paths:
      - backend:
          service:
            name: flaskpoker
            port:
              name: http
        path: /
        pathType: Prefix
  - host: poker.jskw.dev
    http:
      paths:
      - backend:
          service:
            name: flaskpoker
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - arrakis.jskw.dev
    - '*.arrakis.jskw.dev'
    secretName: wild-arrakis
  - hosts:
    - jskw.dev
    - '*.jskw.dev'
    secretName: wild-jskw-dev
